Fix error spacing

--- a/src/components/ModalWithForm/ModalWithForm.css
+++ b/src/components/ModalWithForm/ModalWithForm.css
@@ -193,9 +193,10 @@
   font-size: 12px;
   margin-top: 4px;
   position: absolute;
-  bottom: -20px;
+  /* bottom: -28px; */
   left: 0;
-  margin-bottom: 5px;
+  margin-bottom: 8px;
+  line-height: 1.2;
 }
 
 .modal__input_type_error {
@@ -206,7 +207,7 @@
 .modal__label {
   position: relative;
   display: block;
-  margin-bottom: 22px;
+  margin-bottom: 32px;
 }
 
 .modal__button-container {
